add corrections after 4th feedback

--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@ body {
     border-radius: 2vh;
     padding: 2vh;
     background-color: white;
-    margin: 25vh auto;
-    width:30vw;
+    margin: 20vh auto;
+    width:40vh;
     text-align: center;
 }
 .card-img {
